---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: ":= 2"
---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..4): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..4): []
        CallStmt@(FileId(1), 3..4): [no params]
          Literal@(FileId(1), 3..4): Integer(2)
error in file FileId(1) at 0..2: unexpected token
| error in file FileId(1) for 0..2: expected statement, but found `:=`

